--- a/css/all.css
+++ b/css/all.css
@@ -6,60 +6,77 @@ p{
     margin: 0;
     color: #08007B;
 }
-
-/* #revenue{
-    background-image: url("../images/revenue.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    height: 800px;
-    width: auto;
-} */
-
-
-/* /////////revenue//////////// */
-.topImage{
-    position: absolute;
-    margin-top: -192px;
-    transform: rotate(-15deg);
-    margin-left: -143px;
-}
-.content_brand{
-    margin-top: 100px;
-    margin-left: 45px;
-    font-size: 40px;line-height: normal;
-}
 span{
     font-size: 55px;
     font-weight: bold;
 }
-/* .container{
-    background-image: url("../images/brand/middle.png");
-    width: 1000px;
-    height: auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+a:hover{
+    text-decoration: none;
+}
+
+
+/* Future */
+.future{
+    background: url('../images/gBox.png') -365px -330px no-repeat ,url('../images/Intersection.png') -370px 23px no-repeat;
+    height: 1600px;
+    padding-top: 50px;
+}
+.future .container .dis{
+    font-size: 40px;
+}
+.future .details p{
+    color: #000;
+    padding-top: 30px;
+}
+/* Visual */
+.visual{
+    background: url('../images/v1.png') 101% -3% no-repeat,url('../images/v1.png') 101% 6% no-repeat ,url('..//images/v23.png') 0% 67% no-repeat,url('..//images/r3a.png') -104px 53px no-repeat;
+    height: 600px;
+    padding-top: 50px;
+}
+.visual .details p, .end{
+    color: #000;
+    margin-left: 35px;
+}
+.visual .details p:nth-child(1){
+    margin-bottom: 20px;
+}
+.visual .details p:nth-child(2){
+    margin-bottom: 20px;
+}
+
+img.video-img {
+    width: 100%;
+    margin: 0 auto;
+    padding: 35px;
+}
+.video {
     position: relative;
-} */
-#revenue .details p{
-    color:#000;
-    font-size: 25px;margin-top: 100px;
-    margin-left: 150px;
-}
-.middle {
-    position: absolute;
-    top: 3px;
-    left: 200px;
-
-}
-.bottom .right{
-    position: absolute;
-    margin-top: -230px;
-    margin-right: 230px !important;
+    margin-bottom: 10px;
 }
 
+.video h5 {
+    text-align: center;
+    margin-top: -20px;
+    margin-bottom: 10px;
+}
+img.v3-img {
+    position: absolute;
+    top: -67px;
+    left: -249px;
+    width: 34%;
+    z-index: 5;
+}
+img.v9-img {
+    position: absolute;
+    top: -95px;
+    width: 32%;
+    right: -203px;
+    z-index: 8;
+    opacity: 0.7;
+    color: red !important;
+    transform: rotate(8deg);
+}
 /* //////////////market///////////////// */
 
 #market{
@@ -93,3 +110,56 @@ span{
 #market .details p:nth-child(2){margin-bottom: 15px;}
 #market .details p:nth-child(3){margin-bottom: 15px;}
 #market .details p:nth-child(4){margin-bottom: 15px;}
+
+/* /////////revenue//////////// */
+.topImage{
+    position: absolute;
+    margin-top: -192px;
+    transform: rotate(-15deg);
+    margin-left: -143px;
+}
+.content_brand{
+    margin-top: 100px;
+    margin-left: 45px;
+    font-size: 40px;line-height: normal;
+}
+#revenue .details p{
+    color:#000;
+    font-size: 25px;margin-top: 100px;
+    margin-left: 150px;
+}
+.middle {
+    position: absolute;
+    top: 3px;
+    left: 200px;
+
+}
+.bottom .right{
+    position: absolute;
+    margin-top: -5px;
+    margin-left: 471px;
+}
+
+/* Augmented */
+#augmented{
+    padding-top: 50px;
+}
+.name{
+    line-height: 45px;
+}
+.name span{
+    margin-left: -10px;
+}
+#augmented .details p{
+    font-size: 20px;
+    color: #000;
+}
+#augmented .details p:nth-child(1){
+    margin-left: 130px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+#augmented .details p:nth-child(2){
+    margin-left: 125px;
+    margin-bottom: 20px;
+}
